Removal of the write and read settings using Properties